[package]
name = "rustwell"
version = "0.1.0"
authors = ["Omri <ocschwar@mit.edu>"]

[dependencies]
docopt = "*"
diesel =         { version = "*", default-features = false, features = ["sqlite", "huge-tables" ] }
#diesel_codegen = { version = "*", default-features = false, features = ["sqlite"] }
serde_derive = "*"
serde = "*"
dotenv = "*"
regex="*"
rocket="*"
failure="*"
failure_derive="*"
rocket_codegen="*"
r2d2 = "*"
r2d2-diesel = "*"
rocket_contrib = "*"
error-chain = "*"
rexif = "*"